@@ -1,3 +1,4 @@
+	* support retry-after header for web seeds
 	* replaced boost.filesystem with custom functions
 	* replaced dependency on boost.thread by asio's internal thread primitives
 	* added support for i2p torrents
